--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100vh;
+    height: auto;
     width: 100vw;
     margin: 0;
     padding: 0;
@@ -44,6 +44,7 @@ html, body {
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    gap: 10px;
 }
 
 #party {
@@ -51,31 +52,41 @@ html, body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    max-height: 50px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 15px;
 }
 
 #center {
     display: flex;
     flex-direction: row;
     height: auto;
-    width: 100%;
-    margin-right: auto;
+    width: auto;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #bottom {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    width: 100%;
-    margin-right: auto;
+    align-items: center;
+    width: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 15px;
 }
 
 #characters {
     display: flex;
     gap: 10px;
     padding-right: 10px;
-    padding-left: 10px;
     max-width: 760px;
     justify-content: flex-start;
     align-items: center;
@@ -84,7 +95,6 @@ html, body {
 #ouroboros {
     display: flex;
     gap: 10px;
-    padding-right: 10px;
     padding-left: 10px;
     max-width: 650px;
     justify-self: end;
@@ -95,10 +105,8 @@ html, body {
 #characterPortrait {
     display: flex;
     position: relative;
-    height: 100%;
-    width: 100%;
-    max-height: 480px;
-    max-width: 200px;
+    min-height: 480px;
+    min-width: 200px;
     justify-content: flex-start;
     align-self: start;
 }
@@ -106,7 +114,7 @@ html, body {
 #stats {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -116,33 +124,33 @@ html, body {
     flex-direction: row;
     align-items: center;
     background-color: rgba(0,0,0,0.4);
-    border-radius: 10px;
+    border-radius: 12px;
 }
 
 #statuses {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 200px;
+    width: 100%;
     max-height: 480px;
     height: 100%;
     overflow-y: auto;
     background-color: rgba(0,0,0,0.4);
-    border-radius: 6px;
+    border-radius: 15px;
 }
 
 #damageNumbers {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 500px;
+    width: 100%;
     max-height: 480px;
     height: 100%;
     margin-left: 10px;
     margin-right: 10px;
     overflow-y: auto;
     background-color: rgba(0,0,0,0.4);
-    border-radius: 6px;
+    border-radius: 15px;
 }
 
 #equipment {
@@ -153,6 +161,8 @@ html, body {
     justify-content: flex-end;
     margin-left: auto;
     height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 15px;
 }
 
 #gems {
@@ -170,9 +180,8 @@ html, body {
 #info {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     padding-left: 10px;
-    padding-top: 10px;
 }
 
 #class {
@@ -199,8 +208,8 @@ html, body {
 #skills {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 10px;
+    justify-content: center;
+    height: 100%;
     padding-left: 10px;
 }
 
@@ -224,9 +233,8 @@ html, body {
     width: 100%;
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: 10px;
-    background-color: rgba(0,0,0,0.4);
-    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #masterArts {
@@ -257,7 +265,6 @@ html, body {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    width: 250px;
 }
 
 #classArts {
@@ -402,7 +409,7 @@ html, body {
     margin-bottom: 5px;
     justify-content: space-between;
     border-radius: 15px;
-    background-color: #2d2d2d7b;
+    background-color: rgba(0,0,0,0.4);
 }
 
 .horizontal-fields-modal {
@@ -414,6 +421,11 @@ html, body {
 
 .horizontal-fields-modal:hover {
     background-color: #cc7e19c6;
+}
+
+.horizontal-fields-skill {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
 
 .number-input {
@@ -460,11 +472,12 @@ html, body {
 .gem-remove {
     display: flex;
     position: absolute;
-    color: #000000a4;
+    color: #000000;
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 70px;
     cursor: pointer;
+    text-shadow: 1px 1px #cc7e19cf;
 }
 
 .gem-description {
@@ -546,6 +559,7 @@ html, body {
         content: "\2039";
     }
   }
+
   .icon-next {
     position: absolute;
     color: #ffffff;
@@ -583,11 +597,16 @@ html, body {
 .accessory-remove {
     display: flex;
     position: absolute;
-    color: #000000a4;
+    color: #000000;
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 60px;
     cursor: pointer;
+    text-shadow: 1px 1px #cc7e19cf;
+}
+
+.accessory-description {
+    display: none;
 }
 
 .accessory-features {
@@ -603,8 +622,8 @@ html, body {
 .accessory-features-menu {
     cursor: pointer;
     z-index: 5;
+    background-color: rgba(0,0,0,0.4);;
     border-radius: 15px;
-    background-color: #00000000;
     transition: background-color 0.2s;
 }
 
@@ -631,7 +650,7 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     border: 10px solid #2c2c2c;
-    width: 500px;
+    width: 550px;
     height: 90%;
     animation: dropdown 0.4s;
     display: flex;
@@ -639,6 +658,8 @@ html, body {
 }
 
 .accessory-list {
+    display: flex;
+    flex-direction: column;
     gap: 10px;
     justify-content: space-around;
     overflow-y: auto;
@@ -699,15 +720,18 @@ html, body {
 }
 
 .modal-icon {
-    height: 100%;
-    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    width: 100px;
     cursor: pointer;
     border-radius: 15px;
 }
 
 .modal-icon img {
-    width: auto;
-    height: 100px;
+    width: 96px;
+    height: 96px;
 }
 
 .modal-icon-gem {
@@ -733,7 +757,7 @@ html, body {
     position: relative;
     align-items: center;
     justify-content: center;
-    height: 90px;
+    min-height: 90px;
     width: 95%;
     margin-left: auto;
     margin-right: auto;
@@ -981,20 +1005,28 @@ html, body {
         }
     }
 
+    .tooltip {
+        visibility: hidden;
+    }
+
     #statCalculator {
+        height: auto;
         width: 100%;
     }
 
     #party {
         flex-direction: column;
-        gap: 20px;
+        gap: 10px;
         position: fixed;
         top: 0px;
         left: 50%;
         transform: translateX(-50%);
         height: 210px;
+        max-height: 210px;
         width: 100%;
         z-index: 97;
+        border-top-right-radius: 0px;
+        border-top-left-radius: 0px;
         border-bottom-right-radius: 15px;
         border-bottom-left-radius: 15px;
         background-color: #2d2d2d;
@@ -1008,16 +1040,17 @@ html, body {
     }
     
     #characters {
-        height: 42px;
+        height: 50px;
         max-width: 1000px;
         gap: 20px;
+        padding-right: 0px;
         justify-content: center;
         order: 1;
     }
 
     #ouroboros {
         box-sizing: border-box;
-        height: 42px;
+        height: 50px;
         max-width: 1000px;
         gap: 20px;
         justify-content: center;
@@ -1031,7 +1064,7 @@ html, body {
         font-size: 2em;
         margin-top: 10px;
         background-color: #cc7e19c6;
-        border-radius: 10px;
+        border-radius: 15px;
     }
 
     .icon img {
@@ -1064,22 +1097,22 @@ html, body {
         flex-direction: column;
         gap: 10px;
         position: relative;
-        top: 220px;
+        margin-top: 220px;
         width: 100%;
+        margin-left: 0;
+        margin-right: 0;
         box-sizing: border-box;
     }
 
     #bottom {
         display: grid;
         grid-template-areas:
-            ". ."
+            "row1 row1"
             "row2 row2";
         grid-template-columns: auto 50%;
         gap: 10px;
         position: relative;
-        top: 220px;
         padding-bottom: 10px;
-        width: 100%;
         box-sizing: border-box;
     }
 
@@ -1170,9 +1203,15 @@ html, body {
         grid-area: row2;
     }
 
+    #info {
+        padding-top: 10px;
+    }
+
     #skills {
         align-items: flex-start;
-        height: 100%;
+        padding-top: 10px;
+        padding-right: 10px;
+        padding-left: 0;
     }
 
     #classSkills {
@@ -1213,7 +1252,7 @@ html, body {
     }
 
     .modal-icon-accessory {
-        height: 120px;
+        min-height: 120px;
     }
 
     .modal-icon-accessory img {
@@ -1269,6 +1308,7 @@ html, body {
     }
 
     .accessory-container {
+        flex-direction: column;
         position: relative;
         width: 100%;
     }
@@ -1294,6 +1334,12 @@ html, body {
         margin: 0;
         top: -8px;
         right: -5px;
+    }
+    
+    .accessory-description {
+        display: block;
+        text-align: center;
+        font-size: 1.5em;
     }
 
     .accessory-text-2 {
