--- a/style.css
+++ b/style.css
@@ -181,28 +181,27 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 10px;
+    width: 220px;
+    margin-left: 10px;
+    gap: 5px;
 }
 
 #class {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    min-width: 300px;
+    width: 220px;
 }
 
 #classInfo {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-around;
     padding-left: 10px;
 }
 
-#characterLevel {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 10px;
+#upgrade-field {
+    margin: 0px;
 }
 
 #skills {
@@ -228,7 +227,7 @@ html, body {
 #arts {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     margin-left: 10px;
@@ -242,6 +241,7 @@ html, body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    text-align: start;
 }
 
 #artContainerLeft {
@@ -265,14 +265,16 @@ html, body {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    width: 220px;
+    text-align: start;
 }
 
 #classArts {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    margin-left: auto;
     align-items: center;
+    text-align: end;
 }
 
 #normalArts {
@@ -404,9 +406,8 @@ html, body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    width: -webkit-fill-available;
+    margin: 10px;
     justify-content: space-between;
     border-radius: 15px;
     background-color: rgba(0,0,0,0.4);
@@ -680,8 +681,8 @@ html, body {
 }
 
 .classIcon img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .classMenu {
@@ -713,7 +714,6 @@ html, body {
 .class-list {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     justify-content: space-around;
     align-items: center;
     overflow-y: auto;
@@ -817,7 +817,7 @@ html, body {
 }
 
 .info-text-1 {
-    margin-top: 0%;
+    margin: 0px;
 }
 
 .stats-text {
@@ -1204,6 +1204,7 @@ html, body {
     }
 
     #info {
+        width: auto;
         padding-top: 10px;
     }
 
@@ -1240,6 +1241,7 @@ html, body {
     #accessories {
         width: 70%;
         align-items: center;
+        margin: 20px 0px;
     }
 
     .accessoriesMenuContent {
