--- a/style.css
+++ b/style.css
@@ -549,6 +549,15 @@ html, body {
     grid-auto-flow: column;
 }
 
+.gem-name {
+    display: none;
+    position: absolute;
+    bottom: -30px;
+    font-size: 1.2em;
+    text-align: center;
+    text-wrap: nowrap;
+}
+
 .icon-prev {
     position: absolute;
     color: #ffffff;
@@ -1180,11 +1189,12 @@ html, body {
     }
 
     .number-input {
-        font-size: 1.2em;
-        width: 100px;
+        font-size: 1.7em;
+        width: 40%;
     }
 
     .smaller-text {
+        width: 50%;
         font-size: 1.3rem;
     }
 
@@ -1298,6 +1308,10 @@ html, body {
         order: 2;
     }
 
+    .gem-name {
+        display: block;
+    }
+
     .gem-description {
         display: block;
         text-align: center;
@@ -1306,7 +1320,8 @@ html, body {
     }
 
     .gem-list {
-        gap: 20px;
+        gap: 50px;
+        padding: 0 20px 30px;
     }
 
     .accessory-container {
