--- a/style.css
+++ b/style.css
@@ -456,6 +456,10 @@ html, body {
     filter: brightness(100%);
 }
 
+.buffIcon:active {
+    transform: scale(0.9);
+}
+
 .gemContainer {
     display: flex;
     flex-direction: row;
@@ -671,7 +675,6 @@ html, body {
 .accessory-list {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     justify-content: space-around;
     overflow-y: auto;
 }
@@ -714,7 +717,7 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     border: 10px solid #2c2c2c;
-    width: 550px;
+    width: 600px;
     height: 90%;
     animation: dropdown 0.4s;
     display: flex;
@@ -769,8 +772,7 @@ html, body {
     justify-content: center;
     min-height: 90px;
     width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 10px auto 10px;
     cursor: context-menu;
 }
 
@@ -936,8 +938,8 @@ html, body {
 }
 
 .artSlotModal img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .art-features {
@@ -966,6 +968,10 @@ html, body {
 
 .accordion-button-custom {
     border-radius: 15px;
+}
+
+.clickButton:active {
+    transform: scale(0.9);
 }
 
 .width-limiter {
@@ -1282,7 +1288,12 @@ html, body {
         width: 150px;
     }
 
+    .modal-icon-gem {
+        height: 100px;
+    }
+
     .modal-icon-accessory {
+        width: 95%;
         min-height: 120px;
     }
 
