--- a/style.css
+++ b/style.css
@@ -79,8 +79,7 @@ html, body {
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    background-color: rgba(0,0,0,0.4);
-    border-radius: 15px;
+    gap: 10px;
 }
 
 #characters {
@@ -182,8 +181,11 @@ html, body {
     flex-direction: column;
     justify-content: center;
     width: 220px;
-    margin-left: 10px;
+    height: 100%;
+    padding: 10px;
     gap: 5px;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 15px;
 }
 
 #class {
@@ -209,7 +211,9 @@ html, body {
     flex-direction: column;
     justify-content: center;
     height: 100%;
-    padding-left: 10px;
+    padding: 10px;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 15px;
 }
 
 #classSkills {
@@ -230,10 +234,9 @@ html, body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 15px;
 }
 
 #masterArts {
@@ -1130,14 +1133,13 @@ html, body {
     }
 
     #bottom {
-        display: grid;
-        grid-template-areas:
-            "row1 row1"
-            "row2 row2";
-        grid-template-columns: auto 50%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
         gap: 10px;
         position: relative;
         padding-bottom: 10px;
+        margin: 0;
         box-sizing: border-box;
     }
 
@@ -1224,33 +1226,30 @@ html, body {
         height: auto;
     }
 
-    #arts {
+    #class {
         width: auto;
-        grid-area: row2;
+    }
+
+    #arts {
+        flex-direction: column-reverse;
+        width: calc(100% - 20px);
+        margin: 0 10px;
     }
 
     #info {
-        width: auto;
-        padding-top: 10px;
+        width: calc(100% - 20px);
+        margin: 0 10px;
     }
 
     #skills {
-        align-items: flex-start;
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-left: 0;
+        align-items: center;
+        width: calc(100% - 20px);
+        margin: 0 10px;
     }
 
-    #classSkills {
-        height: 50%;
-        width: 100%;
-        box-sizing: border-box;
-    }
-
-    #masterSkills {
-        height: 50%;
-        width: 100%;
-        box-sizing: border-box;
+    .skillSlot {
+        height: 128px;
+        width: auto;
     }
 
     .skillSlot img {
@@ -1259,7 +1258,7 @@ html, body {
     }
 
     .showSkillInfo {
-        height: 100%;
+        height: 128px;
     }
 
     #gems {
@@ -1409,10 +1408,6 @@ html, body {
         border-radius: 15px;
     }
 
-    #arts {
-        flex-direction: column-reverse;
-    }
-
     #artContainerLeft {
         margin-right: 100px;
     }
@@ -1422,20 +1417,23 @@ html, body {
     }
 
     #classArts {
+        justify-content: flex-start;
+        width: 100%;
         margin-left: 0;
     }
 
     #normalArts {
-        width: 500px;
+        width: calc(50% + 50px);
+        margin: 0;
     }
 
     #artContainerTalent {
-        width: 400px;
+        width: auto;
     }
 
     #masterArts {
-        width: 500px;
-        margin-left: 400px;
+        width: calc(50% + 50px);
+        margin-left: auto;
     }
 
     .artSlot {
