--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     transition: background-image 0.3s ease-in-out;
+}
+
+body {
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -553,19 +556,20 @@ h1 {
     display: grid;
     grid-template-columns: [first] auto [line2] auto [line3] auto [line4] auto [end];
     grid-template-rows: [row1-start] auto [row1-end] auto [third-line] auto [fourth-line] auto [fifth-line] auto [last-line];
-    gap: 10px;
-    padding: 10px;
-    padding-top: 0px;
+    row-gap: 25px;
+    column-gap: 30px;
+    padding: 0 10px 25px;
     justify-content: space-around;
     overflow-y: auto;
     grid-auto-flow: column;
 }
 
 .gem-name {
-    display: none;
+    display: block;
     position: absolute;
-    bottom: -30px;
-    font-size: 1.2em;
+    bottom: -25px;
+    z-index: 5;
+    font-size: 1.1em;
     text-align: center;
     text-wrap: nowrap;
 }
@@ -1348,20 +1352,11 @@ h1 {
         order: 2;
     }
 
-    .gem-name {
-        display: block;
-    }
-
     .gem-description {
         display: block;
         text-align: center;
         font-size: 1.5em;
         order: 3;
-    }
-
-    .gem-list {
-        gap: 50px;
-        padding: 0 20px 30px;
     }
 
     .accessory-container {
