--- a/style.css
+++ b/style.css
@@ -994,8 +994,24 @@ h1 {
     height: auto;
 }
 
-.accordion-button-custom {
+.accordion-button-custom.collapsed {
+    color: #ffebda;
     border-radius: 15px;
+    background-color: #00000000;
+    background-image: linear-gradient(#62221ec2, #95472fc2);
+    box-shadow: 0 0 0 .15rem #ffebdac2;
+    filter: drop-shadow(0px 0px 10px #00000000);
+    transition: filter 0.3s;
+}
+
+.accordion-button-custom:not(.collapsed) {
+    color: #ffebda;
+    border-radius: 15px;
+    background-color: #00000000;
+    background-image: linear-gradient(#62221e, #95472f);
+    box-shadow: 0 0 0 .15rem #ffebdac2;
+    filter: drop-shadow(0px 0px 10px #95472f);
+    transition: filter 0.3s;
 }
 
 .clickButton:active {
