--- a/style.css
+++ b/style.css
@@ -442,8 +442,13 @@ h1 {
 }
 
 .number-input {
+    color: #ffebda;
+    background-color: #00000000;
+    background-image: linear-gradient(#62221e, #95472f);
+    box-shadow: 0 0 0 .10rem #ffebdac2;
     margin: 10px;
     width: 70px;
+    border-radius: 5px;
 }
 
 .smaller-text {
@@ -1257,6 +1262,7 @@ h1 {
     .number-input {
         font-size: 1.7em;
         width: 40%;
+        box-shadow: 0 0 0 .15rem #ffebdac2;
     }
 
     .smaller-text {
