--- a/style.css
+++ b/style.css
@@ -1033,9 +1033,9 @@ h1 {
 }
 
 .tour-start {
-    position: fixed;
-    bottom: 15px;
-    right: 10px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
     max-width: 60px;
     z-index: 98;
     height: auto;
@@ -1167,6 +1167,7 @@ h1 {
     }
 
     .tour-start {
+        position: fixed;
         top: 5px;
         right: 5px;
         bottom: 0;
